--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Homework 1</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    ayyyeeeee wuddup fam
+    <header><p>Header</p></header>
+    <div id="nav"><p>nav</p></div>
+    <div id="wrapper">
+        <div id="section"><p>section</p>
+            <div id="article"><p>article</p>
+                <div id="headers" ><h1><p>h1h2h3</p></h1></div>
+                <div id="psection"><p>PPPPPP</p></div>
+            </div>
+        </div>
+        <div id="aside"><p>aside</p></div>
+    </div>
+    <div id="footer"><p>footer</p></div>
+
 </body>
 </html>
